[tool.poetry]
name = "psldemo"
version = "0.1.0"
description = "Public Share Link demo build with Streamlit for Marple"
authors = ["arthur <arthur@marpledata.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
